--- a/ng-jamestudio/src/components/smarts/nav-item/nav-item.component.css
+++ b/ng-jamestudio/src/components/smarts/nav-item/nav-item.component.css
@@ -15,11 +15,11 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  color: white;
+  color: #1F1F1F;
   font-size: auto;
 }
 
 p {
-  color: white;
+  color: #1F1F1F;
   font-size: auto;
 }
